# bdwgc

./: .appveyor.yml  .cspell.json  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.direct  Makefile.in  NT_MAKEFILE  README.md  allchblk.c  alloc.c  backgraph.c  blacklst.c  build.zig  build.zig.zon  checksums.c  configure  configure.ac  darwin_stop_world.c  dbg_mlc.c  digimars.mak  dyn_load.c  finalize.c  gc.man  gc_badalc.cc  gc_cpp.cc  gc_dlopen.c  gcj_mlc.c  headers.c  mach_dep.c  malloc.c  mallocx.c  mark.c  mark_rts.c  misc.c  new_hblk.c  os_dep.c  (+7 more)
.github/workflows/: CodeQL.yml  autotools-build-extra.yml  clang-format-check.yml  cmake-build-extra.yml  cmake-build.yml  cmake-cosmo.yml  cppcheck.yml  csa-check.yml  format-check.yml  make-direct-build.yml  spell-check.yaml  spell-check.yml  zig-build.yml  zig-cross-compile-other.yml  zig-cross-compile.yml  zig-format-check.yml
cord/: cord.am  cordbscs.c  cordprnt.c  cordtest.c  cordxtra.c  de.c  de_win.c
cord/tests/: cordtest.c  de.c  de_cmds.h  de_win.c
doc/: README  README.autoconf  README.changes  README.cmake  README.environment  README.ews4800  README.macros  debugging.md  gc.man  gcdescr.md  gcinterface.html  gcinterface.md  leak.html  leak.md  overview.html  overview.md  simple_example.md  tree.md
docs/: autoconf.md  cmake.md  debugging.md  environment.md  faq.md  finalization.md  gcdescr.md  gcinterface.md  leak.md  macros.md  overview.md  porting.md  scale.md  simple_example.md  tree.md
extra/: gc.c  msvc_dbg.c  setjmp_t.c
include/: cord.h  cord_pos.h  gc.h  gc_allocator.h  gc_disclaim.h  gc_inline.h  gc_mark.h  gc_pthread_redirects.h  gc_typed.h  gc_version.h  leak_detector.h
include/gc/: cord.h  gc.h  gc_config_macros.h  gc_cpp.h  gc_inline.h  gc_mark.h  gc_tiny_fl.h  gc_typed.h  gc_version.h  leak_detector.h
include/private/: config.h.in  cord_pos.h  darwin_stop_world.h  dbg_mlc.h  gc_hdrs.h  gc_locks.h  gc_pmark.h  gc_priv.h  gcconfig.h  pthread_support.h  specific.h  thread_local_alloc.h
m4/: gc_set_version.m4
tests/: atomicops.c  cpp.cc  dbgfunc.c  disclaim.c  disclaim_bench.c  disclaim_test.c  disclaim_weakmap_test.c  gctest.c  initfromthread.c  leak.c  realloc.c  staticroots.c  staticroots_lib.c  subthreadcreate.c  test.c  test_cpp.cc  tests.am  threadkey.c  threadleak.c  tree.cc  typed.c  weakmap.c
tools/: if_mach.c  if_not_there.c  setjmp_t.c  threadlibs.c
